# matryoshka-sqlite

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
bindings/: Cargo.toml  README.md  build.rs
bindings/.cargo/: config.toml
bindings/dotnet/Matryoshka/: Matryoshka.cs  Matryoshka.csproj
bindings/dotnet/Matryoshka.Tests/: Tests.cs
bindings/dotnet_binding/: dotnet_binding.sln
bindings/dotnet_binding/Matryoshka.Tests/: Matryoshka.Tests.csproj
bindings/python/: __init__.py  __main__.py  api_element.py  exception.py  file.py  file_system.py  matryoshka.py  status.py  system.py
bindings/src/: lib.rs
bindings/tests/: dotnet_binding.rs  interface.rs  python_binding.rs
matryoshka/: all.html  fn.Delete.html  fn.DestroyFileHandle.html  fn.DestroyFileSystem.html  fn.DestroyStatus.html  fn.Find.html  fn.GetMessage.html  fn.GetSize.html  fn.Load.html  fn.Open.html  fn.Pull.html  fn.Push.html  index.html  sidebar-items.js  struct.FileHandle.html  struct.FileSystem.html  struct.Status.html
matryoshka/errors/: enum.CreationError.html  enum.FileSystemError.html  enum.LoadingError.html  enum.ReadError.html  index.html  sidebar-items.js  struct.DatabaseError.html  trait.Error.html
matryoshka/ffi/: fn.Delete.html  fn.DestroyFileHandle.html  fn.DestroyFileSystem.html  fn.DestroyStatus.html  fn.Find.html  fn.GetMessage.html  fn.GetSize.html  fn.Load.html  fn.Open.html  fn.Pull.html  fn.Push.html  struct.FileHandle.html  struct.FileSystem.html  struct.Status.html
matryoshka/file_system/: index.html  sidebar-items.js  struct.File.html  struct.FileSystem.html  struct.Handle.html
matryoshka_sqlite/: all.html  index.html  sidebar-items.js  struct.Database.html  struct.File.html  struct.FileSystem.html  struct.Handle.html
matryoshka_sqlite/errors/: enum.CreationError.html  enum.FileSystemError.html  enum.LoadingError.html  enum.ReadError.html  index.html  struct.DatabaseError.html  trait.Error.html
src/: errors.rs  ffi.rs  file_system.rs  lib.rs
src/errors/: creation_error.rs  mod.rs  (+4 more)
tests/: dotnet_binding.rs  python_binding.rs
(+65 files in other folders)
