[package]
name = "matryoshka-sqlite"
version = "0.3.2"
authors = ["Christopher Gundler <christopher@gundler.de>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[lib]
name = "matryoshka"
crate-type = ["lib", "cdylib"]

[dependencies]
regex = "1"
const_format = "0.2"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled", "blob", "limits"]

[dev-dependencies]
test-case = "1.1"
test-cdylib = "1.1"
tempfile = "3.2"

[build-dependencies]
cbindgen = "0.20"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
