[package]
name = "matryoshka-sqlite"
version = "0.4.0"
authors = ["Christopher Gundler <christopher@gundler.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
name = "matryoshka_sqlite"
crate-type = ["lib"]

[dependencies]
regex = "1"
const_format = "0.2"
static_vcruntime = "1.5"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled", "blob", "limits"]
git = "https://github.com/Christopher22/rusqlite"
branch = "msvc-static-runtime"

[dev-dependencies]
test-case = "1.1"

[workspace]
members = ["bindings"]
